@@ -35,6 +35,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 19006) {{REVISIONUSER}} no longer acts like {{CURRENTUSER}} in some cases
 * (bug 16019) $wgArticlePath = "/$1" no longer breaks API edit/watch actions
 * (bug 18372) File types blacklisted by $wgFileBlacklist will no longer be shown as "Permitted file types" on the upload form
+* (bug 26379) importImages.php gives more descriptive error message on failure.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
